feat: add choose color variant option

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -24,6 +24,11 @@
         app:showAsAction="never">
     </item>
     <item
+        android:title="Change color variant"
+        android:id="@+id/change_color_variant"
+        app:showAsAction="never">
+    </item>
+    <item
         android:title="Configure Crop"
         android:id="@+id/configure_crop"
         app:showAsAction="never">
